# VariDLA

./: .gitignore  Cargo.toml  README.md  test.txt  text.txt
src/: main.rs  objtomanifold.rs  window.rs
src/classes/: dlamanif.rs  mod.rs  objtomanifold.rs
src/view/: mod.rs  oglwindow.rs
